change vae's act funcs to relu and dec output to tanh

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -6879,7 +6879,195 @@
       "Epoch: 11 / 201, Batch: 151 (4864 / 5504), Elapsed time: 134.26 mins\n",
       "Enc Loss = 34.58, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 12056.30, dis_Loss = 6.35, dec_Loss = 81.33, Elapsed time: 134.33 mins\n",
       "Memory Use (GB): 1.5876312255859375\n",
-      "Epoch: 11 / 201, Batch: 152 (4896 / 5504), Elapsed time: 134.33 mins\n"
+      "Epoch: 11 / 201, Batch: 152 (4896 / 5504), Elapsed time: 134.33 mins\n",
+      "Enc Loss = 31.14, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 12861.85, dis_Loss = 6.41, dec_Loss = 82.14, Elapsed time: 134.39 mins\n",
+      "Memory Use (GB): 1.7493553161621094\n",
+      "Epoch: 11 / 201, Batch: 153 (4928 / 5504), Elapsed time: 134.39 mins\n",
+      "Enc Loss = 31.15, KL Divergence = 0.17, Reconstruction Loss = 0.10, ll_loss = 13827.57, dis_Loss = 5.14, dec_Loss = 83.10, Elapsed time: 134.46 mins\n",
+      "Memory Use (GB): 1.620635986328125\n",
+      "Epoch: 11 / 201, Batch: 154 (4960 / 5504), Elapsed time: 134.46 mins\n",
+      "Enc Loss = 35.51, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14121.10, dis_Loss = 5.27, dec_Loss = 83.40, Elapsed time: 134.52 mins\n",
+      "Memory Use (GB): 1.5996551513671875\n",
+      "Epoch: 11 / 201, Batch: 155 (4992 / 5504), Elapsed time: 134.52 mins\n",
+      "Enc Loss = 33.85, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 13723.31, dis_Loss = 5.22, dec_Loss = 83.00, Elapsed time: 134.59 mins\n",
+      "Memory Use (GB): 1.7527732849121094\n",
+      "Epoch: 11 / 201, Batch: 156 (5024 / 5504), Elapsed time: 134.59 mins\n",
+      "Enc Loss = 37.81, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 15202.24, dis_Loss = 6.01, dec_Loss = 84.48, Elapsed time: 134.65 mins\n",
+      "Memory Use (GB): 1.8589057922363281\n",
+      "Epoch: 11 / 201, Batch: 157 (5056 / 5504), Elapsed time: 134.65 mins\n",
+      "Enc Loss = 34.91, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14692.01, dis_Loss = 5.06, dec_Loss = 83.97, Elapsed time: 134.72 mins\n",
+      "Memory Use (GB): 1.8075675964355469\n",
+      "Epoch: 11 / 201, Batch: 158 (5088 / 5504), Elapsed time: 134.72 mins\n",
+      "Enc Loss = 34.17, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13924.74, dis_Loss = 5.09, dec_Loss = 83.20, Elapsed time: 134.79 mins\n",
+      "Memory Use (GB): 1.7858467102050781\n",
+      "Epoch: 11 / 201, Batch: 159 (5120 / 5504), Elapsed time: 134.79 mins\n",
+      "Enc Loss = 36.37, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14683.90, dis_Loss = 6.12, dec_Loss = 83.96, Elapsed time: 134.85 mins\n",
+      "Memory Use (GB): 1.7683601379394531\n",
+      "Epoch: 11 / 201, Batch: 160 (5152 / 5504), Elapsed time: 134.85 mins\n",
+      "Enc Loss = 35.67, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14575.58, dis_Loss = 5.91, dec_Loss = 83.85, Elapsed time: 134.92 mins\n",
+      "Memory Use (GB): 1.8028907775878906\n",
+      "Epoch: 11 / 201, Batch: 161 (5184 / 5504), Elapsed time: 134.92 mins\n",
+      "Enc Loss = 33.75, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14959.80, dis_Loss = 5.74, dec_Loss = 84.24, Elapsed time: 134.98 mins\n",
+      "Memory Use (GB): 1.5963172912597656\n",
+      "Epoch: 11 / 201, Batch: 162 (5216 / 5504), Elapsed time: 134.98 mins\n",
+      "Enc Loss = 34.01, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13440.81, dis_Loss = 5.88, dec_Loss = 82.72, Elapsed time: 135.05 mins\n",
+      "Memory Use (GB): 1.7246742248535156\n",
+      "Epoch: 11 / 201, Batch: 163 (5248 / 5504), Elapsed time: 135.05 mins\n",
+      "Enc Loss = 35.53, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14829.13, dis_Loss = 5.43, dec_Loss = 84.11, Elapsed time: 135.11 mins\n",
+      "Memory Use (GB): 1.7355422973632812\n",
+      "Epoch: 11 / 201, Batch: 164 (5280 / 5504), Elapsed time: 135.11 mins\n",
+      "Enc Loss = 34.81, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13234.53, dis_Loss = 5.30, dec_Loss = 82.51, Elapsed time: 135.18 mins\n",
+      "Memory Use (GB): 1.6650009155273438\n",
+      "Epoch: 11 / 201, Batch: 165 (5312 / 5504), Elapsed time: 135.18 mins\n",
+      "Enc Loss = 34.39, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 12383.39, dis_Loss = 5.01, dec_Loss = 81.66, Elapsed time: 135.24 mins\n",
+      "Memory Use (GB): 1.6004142761230469\n",
+      "Epoch: 11 / 201, Batch: 166 (5344 / 5504), Elapsed time: 135.24 mins\n",
+      "Enc Loss = 37.18, KL Divergence = 0.25, Reconstruction Loss = 0.12, ll_loss = 11926.49, dis_Loss = 6.21, dec_Loss = 81.20, Elapsed time: 135.31 mins\n",
+      "Memory Use (GB): 1.6509742736816406\n",
+      "Epoch: 11 / 201, Batch: 167 (5376 / 5504), Elapsed time: 135.31 mins\n",
+      "Enc Loss = 31.26, KL Divergence = 0.17, Reconstruction Loss = 0.10, ll_loss = 14002.91, dis_Loss = 5.41, dec_Loss = 83.28, Elapsed time: 135.37 mins\n",
+      "Memory Use (GB): 1.6463584899902344\n",
+      "Epoch: 11 / 201, Batch: 168 (5408 / 5504), Elapsed time: 135.37 mins\n",
+      "Enc Loss = 35.65, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 15017.93, dis_Loss = 5.31, dec_Loss = 84.30, Elapsed time: 135.44 mins\n",
+      "Memory Use (GB): 1.7458686828613281\n",
+      "Epoch: 11 / 201, Batch: 169 (5440 / 5504), Elapsed time: 135.44 mins\n",
+      "Enc Loss = 34.49, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13762.75, dis_Loss = 5.87, dec_Loss = 83.04, Elapsed time: 135.50 mins\n",
+      "Memory Use (GB): 1.5765724182128906\n",
+      "Epoch: 11 / 201, Batch: 170 (5472 / 5504), Elapsed time: 135.50 mins\n",
+      "Enc Loss = 31.97, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 12676.04, dis_Loss = 5.51, dec_Loss = 81.95, Elapsed time: 135.57 mins\n",
+      "Memory Use (GB): 1.5873069763183594\n",
+      "Epoch: 11 / 201, Batch: 171 (5504 / 5504), Elapsed time: 135.57 mins\n",
+      "Enc Loss = 33.03, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 13529.70, dis_Loss = 6.16, dec_Loss = 82.81, Elapsed time: 135.63 mins\n",
+      "Memory Use (GB): 1.6374359130859375\n",
+      "Enc Loss = 33.03, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 13529.70, dis_Loss = 6.16, dec_Loss = 82.81, Elapsed time: 135.63 mins\n",
+      "Epoch: 12, Elapsed Time: 135.63\n",
+      "Epoch: 12 / 201, Batch: 0 (32 / 5504), Elapsed time: 135.63 mins\n",
+      "Enc Loss = 31.61, KL Divergence = 0.16, Reconstruction Loss = 0.12, ll_loss = 15209.52, dis_Loss = 5.36, dec_Loss = 84.49, Elapsed time: 135.70 mins\n",
+      "Memory Use (GB): 1.7636642456054688\n",
+      "Epoch: 12 / 201, Batch: 1 (64 / 5504), Elapsed time: 135.70 mins\n",
+      "Enc Loss = 32.87, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12602.05, dis_Loss = 6.41, dec_Loss = 81.88, Elapsed time: 135.76 mins\n",
+      "Memory Use (GB): 1.7152252197265625\n",
+      "Epoch: 12 / 201, Batch: 2 (96 / 5504), Elapsed time: 135.76 mins\n",
+      "Enc Loss = 34.57, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14242.08, dis_Loss = 5.37, dec_Loss = 83.52, Elapsed time: 135.83 mins\n",
+      "Memory Use (GB): 1.8034019470214844\n",
+      "Epoch: 12 / 201, Batch: 3 (128 / 5504), Elapsed time: 135.83 mins\n",
+      "Enc Loss = 38.24, KL Divergence = 0.24, Reconstruction Loss = 0.12, ll_loss = 14666.97, dis_Loss = 5.79, dec_Loss = 83.94, Elapsed time: 135.89 mins\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory Use (GB): 1.827880859375\n",
+      "Epoch: 12 / 201, Batch: 4 (160 / 5504), Elapsed time: 135.89 mins\n",
+      "Enc Loss = 35.69, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14483.46, dis_Loss = 5.44, dec_Loss = 83.76, Elapsed time: 135.96 mins\n",
+      "Memory Use (GB): 1.7561988830566406\n",
+      "Epoch: 12 / 201, Batch: 5 (192 / 5504), Elapsed time: 135.96 mins\n",
+      "Enc Loss = 36.06, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14621.27, dis_Loss = 5.73, dec_Loss = 83.90, Elapsed time: 136.02 mins\n",
+      "Memory Use (GB): 1.58685302734375\n",
+      "Epoch: 12 / 201, Batch: 6 (224 / 5504), Elapsed time: 136.02 mins\n",
+      "Enc Loss = 36.05, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13839.97, dis_Loss = 5.30, dec_Loss = 83.12, Elapsed time: 136.09 mins\n",
+      "Memory Use (GB): 1.6259956359863281\n",
+      "Epoch: 12 / 201, Batch: 7 (256 / 5504), Elapsed time: 136.09 mins\n",
+      "Enc Loss = 35.33, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14914.76, dis_Loss = 6.01, dec_Loss = 84.19, Elapsed time: 136.15 mins\n",
+      "Memory Use (GB): 1.7250709533691406\n",
+      "Epoch: 12 / 201, Batch: 8 (288 / 5504), Elapsed time: 136.15 mins\n",
+      "Enc Loss = 32.58, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12342.65, dis_Loss = 5.04, dec_Loss = 81.62, Elapsed time: 136.22 mins\n",
+      "Memory Use (GB): 1.7041702270507812\n",
+      "Epoch: 12 / 201, Batch: 9 (320 / 5504), Elapsed time: 136.22 mins\n",
+      "Enc Loss = 32.80, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13935.99, dis_Loss = 5.52, dec_Loss = 83.21, Elapsed time: 136.28 mins\n",
+      "Memory Use (GB): 1.691162109375\n",
+      "Epoch: 12 / 201, Batch: 10 (352 / 5504), Elapsed time: 136.28 mins\n",
+      "Enc Loss = 36.76, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 15664.65, dis_Loss = 5.75, dec_Loss = 84.94, Elapsed time: 136.35 mins\n",
+      "Memory Use (GB): 1.7431144714355469\n",
+      "Epoch: 12 / 201, Batch: 11 (384 / 5504), Elapsed time: 136.35 mins\n",
+      "Enc Loss = 36.21, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13991.44, dis_Loss = 5.31, dec_Loss = 83.27, Elapsed time: 136.41 mins\n",
+      "Memory Use (GB): 1.78436279296875\n",
+      "Epoch: 12 / 201, Batch: 12 (416 / 5504), Elapsed time: 136.41 mins\n",
+      "Enc Loss = 35.63, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14538.38, dis_Loss = 6.04, dec_Loss = 83.82, Elapsed time: 136.48 mins\n",
+      "Memory Use (GB): 1.8162574768066406\n",
+      "Epoch: 12 / 201, Batch: 13 (448 / 5504), Elapsed time: 136.48 mins\n",
+      "Enc Loss = 34.55, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13837.85, dis_Loss = 4.16, dec_Loss = 83.11, Elapsed time: 136.54 mins\n",
+      "Memory Use (GB): 1.5759391784667969\n",
+      "Epoch: 12 / 201, Batch: 14 (480 / 5504), Elapsed time: 136.54 mins\n",
+      "Enc Loss = 33.26, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12890.82, dis_Loss = 5.90, dec_Loss = 82.17, Elapsed time: 136.61 mins\n",
+      "Memory Use (GB): 1.5047378540039062\n",
+      "Epoch: 12 / 201, Batch: 15 (512 / 5504), Elapsed time: 136.61 mins\n",
+      "Enc Loss = 34.71, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14344.47, dis_Loss = 4.64, dec_Loss = 83.62, Elapsed time: 136.68 mins\n",
+      "Memory Use (GB): 1.6305160522460938\n",
+      "Epoch: 12 / 201, Batch: 16 (544 / 5504), Elapsed time: 136.68 mins\n",
+      "Enc Loss = 32.41, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 12886.46, dis_Loss = 5.24, dec_Loss = 82.16, Elapsed time: 136.74 mins\n",
+      "Memory Use (GB): 1.7823028564453125\n",
+      "Epoch: 12 / 201, Batch: 17 (576 / 5504), Elapsed time: 136.74 mins\n",
+      "Enc Loss = 32.51, KL Divergence = 0.17, Reconstruction Loss = 0.09, ll_loss = 15155.74, dis_Loss = 4.93, dec_Loss = 84.43, Elapsed time: 136.81 mins\n",
+      "Memory Use (GB): 1.707366943359375\n",
+      "Epoch: 12 / 201, Batch: 18 (608 / 5504), Elapsed time: 136.81 mins\n",
+      "Enc Loss = 34.09, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14655.04, dis_Loss = 5.27, dec_Loss = 83.93, Elapsed time: 136.87 mins\n",
+      "Memory Use (GB): 1.5749893188476562\n",
+      "Epoch: 12 / 201, Batch: 19 (640 / 5504), Elapsed time: 136.87 mins\n",
+      "Enc Loss = 32.50, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 11802.34, dis_Loss = 6.62, dec_Loss = 81.08, Elapsed time: 136.93 mins\n",
+      "Memory Use (GB): 1.6563224792480469\n",
+      "Epoch: 12 / 201, Batch: 20 (672 / 5504), Elapsed time: 136.94 mins\n",
+      "Enc Loss = 34.29, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 15633.19, dis_Loss = 5.37, dec_Loss = 84.91, Elapsed time: 137.00 mins\n",
+      "Memory Use (GB): 1.62286376953125\n",
+      "Epoch: 12 / 201, Batch: 21 (704 / 5504), Elapsed time: 137.00 mins\n",
+      "Enc Loss = 34.98, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13958.22, dis_Loss = 6.08, dec_Loss = 83.24, Elapsed time: 137.07 mins\n",
+      "Memory Use (GB): 1.7356071472167969\n",
+      "Epoch: 12 / 201, Batch: 22 (736 / 5504), Elapsed time: 137.07 mins\n",
+      "Enc Loss = 36.36, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14704.74, dis_Loss = 5.72, dec_Loss = 83.98, Elapsed time: 137.14 mins\n",
+      "Memory Use (GB): 1.6535797119140625\n",
+      "Epoch: 12 / 201, Batch: 23 (768 / 5504), Elapsed time: 137.14 mins\n",
+      "Enc Loss = 33.46, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14639.66, dis_Loss = 4.81, dec_Loss = 83.92, Elapsed time: 137.20 mins\n",
+      "Memory Use (GB): 1.6576194763183594\n",
+      "Epoch: 12 / 201, Batch: 24 (800 / 5504), Elapsed time: 137.20 mins\n",
+      "Enc Loss = 30.63, KL Divergence = 0.17, Reconstruction Loss = 0.10, ll_loss = 13232.94, dis_Loss = 4.36, dec_Loss = 82.51, Elapsed time: 137.27 mins\n",
+      "Memory Use (GB): 1.7458648681640625\n",
+      "Epoch: 12 / 201, Batch: 25 (832 / 5504), Elapsed time: 137.27 mins\n",
+      "Enc Loss = 32.49, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13545.65, dis_Loss = 5.61, dec_Loss = 82.82, Elapsed time: 137.34 mins\n",
+      "Memory Use (GB): 1.5957107543945312\n",
+      "Epoch: 12 / 201, Batch: 26 (864 / 5504), Elapsed time: 137.34 mins\n",
+      "Enc Loss = 32.98, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12760.11, dis_Loss = 5.56, dec_Loss = 82.04, Elapsed time: 137.40 mins\n",
+      "Memory Use (GB): 1.6844635009765625\n",
+      "Epoch: 12 / 201, Batch: 27 (896 / 5504), Elapsed time: 137.40 mins\n",
+      "Enc Loss = 37.79, KL Divergence = 0.24, Reconstruction Loss = 0.13, ll_loss = 14029.62, dis_Loss = 5.61, dec_Loss = 83.31, Elapsed time: 137.47 mins\n",
+      "Memory Use (GB): 1.7009086608886719\n",
+      "Epoch: 12 / 201, Batch: 28 (928 / 5504), Elapsed time: 137.47 mins\n",
+      "Enc Loss = 34.41, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 13242.78, dis_Loss = 6.41, dec_Loss = 82.52, Elapsed time: 137.54 mins\n",
+      "Memory Use (GB): 1.6585884094238281\n",
+      "Epoch: 12 / 201, Batch: 29 (960 / 5504), Elapsed time: 137.54 mins\n",
+      "Enc Loss = 36.80, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 15196.45, dis_Loss = 5.25, dec_Loss = 84.47, Elapsed time: 137.60 mins\n",
+      "Memory Use (GB): 1.6358146667480469\n",
+      "Epoch: 12 / 201, Batch: 30 (992 / 5504), Elapsed time: 137.60 mins\n",
+      "Enc Loss = 35.21, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14325.74, dis_Loss = 5.54, dec_Loss = 83.60, Elapsed time: 137.67 mins\n",
+      "Memory Use (GB): 1.5572738647460938\n",
+      "Epoch: 12 / 201, Batch: 31 (1024 / 5504), Elapsed time: 137.67 mins\n",
+      "Enc Loss = 33.41, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 14472.18, dis_Loss = 5.43, dec_Loss = 83.75, Elapsed time: 137.73 mins\n",
+      "Memory Use (GB): 1.5687904357910156\n",
+      "Epoch: 12 / 201, Batch: 32 (1056 / 5504), Elapsed time: 137.73 mins\n",
+      "Enc Loss = 35.36, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 15017.38, dis_Loss = 6.39, dec_Loss = 84.29, Elapsed time: 137.80 mins\n",
+      "Memory Use (GB): 1.8092842102050781\n",
+      "Epoch: 12 / 201, Batch: 33 (1088 / 5504), Elapsed time: 137.80 mins\n",
+      "Enc Loss = 35.53, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13676.37, dis_Loss = 4.91, dec_Loss = 82.95, Elapsed time: 137.86 mins\n",
+      "Memory Use (GB): 1.6533775329589844\n",
+      "Epoch: 12 / 201, Batch: 34 (1120 / 5504), Elapsed time: 137.86 mins\n",
+      "Enc Loss = 32.84, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13043.29, dis_Loss = 5.91, dec_Loss = 82.32, Elapsed time: 137.93 mins\n",
+      "Memory Use (GB): 1.79376220703125\n",
+      "Epoch: 12 / 201, Batch: 35 (1152 / 5504), Elapsed time: 137.93 mins\n",
+      "Enc Loss = 35.87, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13999.31, dis_Loss = 5.70, dec_Loss = 83.28, Elapsed time: 137.99 mins\n",
+      "Memory Use (GB): 1.803802490234375\n",
+      "Epoch: 12 / 201, Batch: 36 (1184 / 5504), Elapsed time: 137.99 mins\n",
+      "Enc Loss = 35.17, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14006.15, dis_Loss = 5.29, dec_Loss = 83.28, Elapsed time: 138.06 mins\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory Use (GB): 1.7155609130859375\n",
+      "Epoch: 12 / 201, Batch: 37 (1216 / 5504), Elapsed time: 138.06 mins\n",
+      "Enc Loss = 34.43, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 12929.40, dis_Loss = 5.48, dec_Loss = 82.21, Elapsed time: 138.13 mins\n",
+      "Memory Use (GB): 1.7912521362304688\n",
+      "Epoch: 12 / 201, Batch: 38 (1248 / 5504), Elapsed time: 138.13 mins\n"
      ]
     }
    ],
