change discriminators act funcs to leaky_relu

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -7067,7 +7067,190 @@
       "Epoch: 12 / 201, Batch: 37 (1216 / 5504), Elapsed time: 138.06 mins\n",
       "Enc Loss = 34.43, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 12929.40, dis_Loss = 5.48, dec_Loss = 82.21, Elapsed time: 138.13 mins\n",
       "Memory Use (GB): 1.7912521362304688\n",
-      "Epoch: 12 / 201, Batch: 38 (1248 / 5504), Elapsed time: 138.13 mins\n"
+      "Epoch: 12 / 201, Batch: 38 (1248 / 5504), Elapsed time: 138.13 mins\n",
+      "Enc Loss = 33.97, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 13020.28, dis_Loss = 5.70, dec_Loss = 82.30, Elapsed time: 138.19 mins\n",
+      "Memory Use (GB): 1.7601242065429688\n",
+      "Epoch: 12 / 201, Batch: 39 (1280 / 5504), Elapsed time: 138.19 mins\n",
+      "Enc Loss = 34.78, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14507.12, dis_Loss = 6.62, dec_Loss = 83.78, Elapsed time: 138.26 mins\n",
+      "Memory Use (GB): 1.6269721984863281\n",
+      "Epoch: 12 / 201, Batch: 40 (1312 / 5504), Elapsed time: 138.26 mins\n",
+      "Enc Loss = 33.51, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 14649.81, dis_Loss = 5.17, dec_Loss = 83.93, Elapsed time: 138.32 mins\n",
+      "Memory Use (GB): 1.730712890625\n",
+      "Epoch: 12 / 201, Batch: 41 (1344 / 5504), Elapsed time: 138.33 mins\n",
+      "Enc Loss = 36.23, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 14475.14, dis_Loss = 5.70, dec_Loss = 83.75, Elapsed time: 138.39 mins\n",
+      "Memory Use (GB): 1.6695022583007812\n",
+      "Epoch: 12 / 201, Batch: 42 (1376 / 5504), Elapsed time: 138.39 mins\n",
+      "Enc Loss = 33.93, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 13791.96, dis_Loss = 5.96, dec_Loss = 83.07, Elapsed time: 138.45 mins\n",
+      "Memory Use (GB): 1.6569900512695312\n",
+      "Epoch: 12 / 201, Batch: 43 (1408 / 5504), Elapsed time: 138.45 mins\n",
+      "Enc Loss = 33.20, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14380.54, dis_Loss = 5.76, dec_Loss = 83.66, Elapsed time: 138.52 mins\n",
+      "Memory Use (GB): 1.7066383361816406\n",
+      "Epoch: 12 / 201, Batch: 44 (1440 / 5504), Elapsed time: 138.52 mins\n",
+      "Enc Loss = 32.89, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13921.81, dis_Loss = 5.47, dec_Loss = 83.20, Elapsed time: 138.59 mins\n",
+      "Memory Use (GB): 1.6331939697265625\n",
+      "Epoch: 12 / 201, Batch: 45 (1472 / 5504), Elapsed time: 138.59 mins\n",
+      "Enc Loss = 34.48, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14849.60, dis_Loss = 5.17, dec_Loss = 84.13, Elapsed time: 138.65 mins\n",
+      "Memory Use (GB): 1.6138801574707031\n",
+      "Epoch: 12 / 201, Batch: 46 (1504 / 5504), Elapsed time: 138.65 mins\n",
+      "Enc Loss = 33.17, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13922.42, dis_Loss = 5.43, dec_Loss = 83.20, Elapsed time: 138.72 mins\n",
+      "Memory Use (GB): 1.6307601928710938\n",
+      "Epoch: 12 / 201, Batch: 47 (1536 / 5504), Elapsed time: 138.72 mins\n",
+      "Enc Loss = 32.57, KL Divergence = 0.17, Reconstruction Loss = 0.09, ll_loss = 15215.20, dis_Loss = 5.15, dec_Loss = 84.49, Elapsed time: 138.78 mins\n",
+      "Memory Use (GB): 1.7631072998046875\n",
+      "Epoch: 12 / 201, Batch: 48 (1568 / 5504), Elapsed time: 138.78 mins\n",
+      "Enc Loss = 34.81, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 15235.32, dis_Loss = 5.16, dec_Loss = 84.51, Elapsed time: 138.85 mins\n",
+      "Memory Use (GB): 1.6027793884277344\n",
+      "Epoch: 12 / 201, Batch: 49 (1600 / 5504), Elapsed time: 138.85 mins\n",
+      "Enc Loss = 35.10, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13197.33, dis_Loss = 4.90, dec_Loss = 82.47, Elapsed time: 138.91 mins\n",
+      "Memory Use (GB): 1.7103080749511719\n",
+      "Epoch: 12 / 201, Batch: 50 (1632 / 5504), Elapsed time: 138.91 mins\n",
+      "Enc Loss = 32.52, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13129.39, dis_Loss = 5.65, dec_Loss = 82.41, Elapsed time: 138.98 mins\n",
+      "Memory Use (GB): 1.631561279296875\n",
+      "Epoch: 12 / 201, Batch: 51 (1664 / 5504), Elapsed time: 138.98 mins\n",
+      "Enc Loss = 32.70, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12908.66, dis_Loss = 5.33, dec_Loss = 82.19, Elapsed time: 139.04 mins\n",
+      "Memory Use (GB): 1.5996017456054688\n",
+      "Epoch: 12 / 201, Batch: 52 (1696 / 5504), Elapsed time: 139.04 mins\n",
+      "Enc Loss = 31.94, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 12366.29, dis_Loss = 5.56, dec_Loss = 81.64, Elapsed time: 139.11 mins\n",
+      "Memory Use (GB): 1.653594970703125\n",
+      "Epoch: 12 / 201, Batch: 53 (1728 / 5504), Elapsed time: 139.11 mins\n",
+      "Enc Loss = 34.80, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13506.70, dis_Loss = 6.09, dec_Loss = 82.78, Elapsed time: 139.17 mins\n",
+      "Memory Use (GB): 1.8275871276855469\n",
+      "Epoch: 12 / 201, Batch: 54 (1760 / 5504), Elapsed time: 139.17 mins\n",
+      "Enc Loss = 32.87, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13861.82, dis_Loss = 5.84, dec_Loss = 83.14, Elapsed time: 139.24 mins\n",
+      "Memory Use (GB): 1.8287696838378906\n",
+      "Epoch: 12 / 201, Batch: 55 (1792 / 5504), Elapsed time: 139.24 mins\n",
+      "Enc Loss = 36.38, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14532.24, dis_Loss = 6.14, dec_Loss = 83.81, Elapsed time: 139.30 mins\n",
+      "Memory Use (GB): 1.758026123046875\n",
+      "Epoch: 12 / 201, Batch: 56 (1824 / 5504), Elapsed time: 139.30 mins\n",
+      "Enc Loss = 36.84, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 15090.14, dis_Loss = 6.07, dec_Loss = 84.37, Elapsed time: 139.37 mins\n",
+      "Memory Use (GB): 1.6913032531738281\n",
+      "Epoch: 12 / 201, Batch: 57 (1856 / 5504), Elapsed time: 139.37 mins\n",
+      "Enc Loss = 34.02, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13787.25, dis_Loss = 5.76, dec_Loss = 83.06, Elapsed time: 139.43 mins\n",
+      "Memory Use (GB): 1.7004661560058594\n",
+      "Epoch: 12 / 201, Batch: 58 (1888 / 5504), Elapsed time: 139.43 mins\n",
+      "Enc Loss = 32.59, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 14449.94, dis_Loss = 4.60, dec_Loss = 83.73, Elapsed time: 139.50 mins\n",
+      "Memory Use (GB): 1.5234298706054688\n",
+      "Epoch: 12 / 201, Batch: 59 (1920 / 5504), Elapsed time: 139.50 mins\n",
+      "Enc Loss = 37.24, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 14830.49, dis_Loss = 6.34, dec_Loss = 84.11, Elapsed time: 139.56 mins\n",
+      "Memory Use (GB): 1.5034103393554688\n",
+      "Epoch: 12 / 201, Batch: 60 (1952 / 5504), Elapsed time: 139.56 mins\n",
+      "Enc Loss = 36.17, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 15534.95, dis_Loss = 5.72, dec_Loss = 84.81, Elapsed time: 139.63 mins\n",
+      "Memory Use (GB): 1.6582908630371094\n",
+      "Epoch: 12 / 201, Batch: 61 (1984 / 5504), Elapsed time: 139.63 mins\n",
+      "Enc Loss = 36.48, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14726.50, dis_Loss = 5.44, dec_Loss = 84.00, Elapsed time: 139.69 mins\n",
+      "Memory Use (GB): 1.5533370971679688\n",
+      "Epoch: 12 / 201, Batch: 62 (2016 / 5504), Elapsed time: 139.69 mins\n",
+      "Enc Loss = 35.03, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 15597.01, dis_Loss = 5.56, dec_Loss = 84.87, Elapsed time: 139.76 mins\n",
+      "Memory Use (GB): 1.5720481872558594\n",
+      "Epoch: 12 / 201, Batch: 63 (2048 / 5504), Elapsed time: 139.76 mins\n",
+      "Enc Loss = 35.82, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 13213.04, dis_Loss = 6.23, dec_Loss = 82.49, Elapsed time: 139.82 mins\n",
+      "Memory Use (GB): 1.5897026062011719\n",
+      "Epoch: 12 / 201, Batch: 64 (2080 / 5504), Elapsed time: 139.82 mins\n",
+      "Enc Loss = 31.73, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 13631.62, dis_Loss = 6.17, dec_Loss = 82.91, Elapsed time: 139.89 mins\n",
+      "Memory Use (GB): 1.6976852416992188\n",
+      "Epoch: 12 / 201, Batch: 65 (2112 / 5504), Elapsed time: 139.89 mins\n",
+      "Enc Loss = 33.47, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14367.81, dis_Loss = 5.53, dec_Loss = 83.64, Elapsed time: 139.95 mins\n",
+      "Memory Use (GB): 1.5467758178710938\n",
+      "Epoch: 12 / 201, Batch: 66 (2144 / 5504), Elapsed time: 139.95 mins\n",
+      "Enc Loss = 33.40, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 14179.96, dis_Loss = 5.36, dec_Loss = 83.46, Elapsed time: 140.02 mins\n",
+      "Memory Use (GB): 1.5567398071289062\n",
+      "Epoch: 12 / 201, Batch: 67 (2176 / 5504), Elapsed time: 140.02 mins\n",
+      "Enc Loss = 35.30, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14439.47, dis_Loss = 5.84, dec_Loss = 83.72, Elapsed time: 140.08 mins\n",
+      "Memory Use (GB): 1.6325759887695312\n",
+      "Epoch: 12 / 201, Batch: 68 (2208 / 5504), Elapsed time: 140.08 mins\n",
+      "Enc Loss = 35.15, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14822.77, dis_Loss = 5.46, dec_Loss = 84.10, Elapsed time: 140.15 mins\n",
+      "Memory Use (GB): 1.6005668640136719\n",
+      "Epoch: 12 / 201, Batch: 69 (2240 / 5504), Elapsed time: 140.15 mins\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enc Loss = 38.34, KL Divergence = 0.24, Reconstruction Loss = 0.13, ll_loss = 14159.00, dis_Loss = 5.71, dec_Loss = 83.44, Elapsed time: 140.21 mins\n",
+      "Memory Use (GB): 1.5890388488769531\n",
+      "Epoch: 12 / 201, Batch: 70 (2272 / 5504), Elapsed time: 140.21 mins\n",
+      "Enc Loss = 34.91, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 13727.04, dis_Loss = 4.99, dec_Loss = 83.00, Elapsed time: 140.28 mins\n",
+      "Memory Use (GB): 1.6118125915527344\n",
+      "Epoch: 12 / 201, Batch: 71 (2304 / 5504), Elapsed time: 140.28 mins\n",
+      "Enc Loss = 34.75, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13118.88, dis_Loss = 5.11, dec_Loss = 82.40, Elapsed time: 140.34 mins\n",
+      "Memory Use (GB): 1.6309661865234375\n",
+      "Epoch: 12 / 201, Batch: 72 (2336 / 5504), Elapsed time: 140.34 mins\n",
+      "Enc Loss = 33.79, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13349.00, dis_Loss = 5.78, dec_Loss = 82.63, Elapsed time: 140.41 mins\n",
+      "Memory Use (GB): 1.6860923767089844\n",
+      "Epoch: 12 / 201, Batch: 73 (2368 / 5504), Elapsed time: 140.41 mins\n",
+      "Enc Loss = 36.50, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 14488.73, dis_Loss = 5.25, dec_Loss = 83.77, Elapsed time: 140.47 mins\n",
+      "Memory Use (GB): 1.6396713256835938\n",
+      "Epoch: 12 / 201, Batch: 74 (2400 / 5504), Elapsed time: 140.47 mins\n",
+      "Enc Loss = 33.71, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13744.82, dis_Loss = 4.88, dec_Loss = 83.02, Elapsed time: 140.54 mins\n",
+      "Memory Use (GB): 1.6117286682128906\n",
+      "Epoch: 12 / 201, Batch: 75 (2432 / 5504), Elapsed time: 140.54 mins\n",
+      "Enc Loss = 34.52, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13037.68, dis_Loss = 5.32, dec_Loss = 82.31, Elapsed time: 140.60 mins\n",
+      "Memory Use (GB): 1.5940399169921875\n",
+      "Epoch: 12 / 201, Batch: 76 (2464 / 5504), Elapsed time: 140.60 mins\n",
+      "Enc Loss = 34.27, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 15267.78, dis_Loss = 5.18, dec_Loss = 84.55, Elapsed time: 140.67 mins\n",
+      "Memory Use (GB): 1.6997718811035156\n",
+      "Epoch: 12 / 201, Batch: 77 (2496 / 5504), Elapsed time: 140.67 mins\n",
+      "Enc Loss = 35.22, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14876.00, dis_Loss = 4.90, dec_Loss = 84.15, Elapsed time: 140.73 mins\n",
+      "Memory Use (GB): 1.5468711853027344\n",
+      "Epoch: 12 / 201, Batch: 78 (2528 / 5504), Elapsed time: 140.73 mins\n",
+      "Enc Loss = 35.17, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 12947.81, dis_Loss = 5.20, dec_Loss = 82.22, Elapsed time: 140.80 mins\n",
+      "Memory Use (GB): 1.6397247314453125\n",
+      "Epoch: 12 / 201, Batch: 79 (2560 / 5504), Elapsed time: 140.80 mins\n",
+      "Enc Loss = 35.99, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14704.46, dis_Loss = 5.11, dec_Loss = 83.98, Elapsed time: 140.86 mins\n",
+      "Memory Use (GB): 1.5877227783203125\n",
+      "Epoch: 12 / 201, Batch: 80 (2592 / 5504), Elapsed time: 140.86 mins\n",
+      "Enc Loss = 33.43, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13594.05, dis_Loss = 5.55, dec_Loss = 82.87, Elapsed time: 140.93 mins\n",
+      "Memory Use (GB): 1.61962890625\n",
+      "Epoch: 12 / 201, Batch: 81 (2624 / 5504), Elapsed time: 140.93 mins\n",
+      "Enc Loss = 37.07, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 15173.85, dis_Loss = 5.21, dec_Loss = 84.45, Elapsed time: 140.99 mins\n",
+      "Memory Use (GB): 1.6297454833984375\n",
+      "Epoch: 12 / 201, Batch: 82 (2656 / 5504), Elapsed time: 140.99 mins\n",
+      "Enc Loss = 36.80, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 15045.47, dis_Loss = 4.64, dec_Loss = 84.32, Elapsed time: 141.06 mins\n",
+      "Memory Use (GB): 1.6685523986816406\n",
+      "Epoch: 12 / 201, Batch: 83 (2688 / 5504), Elapsed time: 141.06 mins\n",
+      "Enc Loss = 33.45, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13967.18, dis_Loss = 6.45, dec_Loss = 83.24, Elapsed time: 141.13 mins\n",
+      "Memory Use (GB): 1.7120208740234375\n",
+      "Epoch: 12 / 201, Batch: 84 (2720 / 5504), Elapsed time: 141.13 mins\n",
+      "Enc Loss = 33.23, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13959.19, dis_Loss = 5.44, dec_Loss = 83.24, Elapsed time: 141.19 mins\n",
+      "Memory Use (GB): 1.8736381530761719\n",
+      "Epoch: 12 / 201, Batch: 85 (2752 / 5504), Elapsed time: 141.19 mins\n",
+      "Enc Loss = 35.66, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13835.49, dis_Loss = 4.05, dec_Loss = 83.11, Elapsed time: 141.26 mins\n",
+      "Memory Use (GB): 1.9389190673828125\n",
+      "Epoch: 12 / 201, Batch: 86 (2784 / 5504), Elapsed time: 141.26 mins\n",
+      "Enc Loss = 35.36, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 15480.26, dis_Loss = 5.18, dec_Loss = 84.76, Elapsed time: 141.32 mins\n",
+      "Memory Use (GB): 1.8637809753417969\n",
+      "Epoch: 12 / 201, Batch: 87 (2816 / 5504), Elapsed time: 141.32 mins\n",
+      "Enc Loss = 32.01, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 12988.21, dis_Loss = 4.84, dec_Loss = 82.27, Elapsed time: 141.39 mins\n",
+      "Memory Use (GB): 1.7535400390625\n",
+      "Epoch: 12 / 201, Batch: 88 (2848 / 5504), Elapsed time: 141.39 mins\n",
+      "Enc Loss = 34.36, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14277.53, dis_Loss = 6.09, dec_Loss = 83.55, Elapsed time: 141.45 mins\n",
+      "Memory Use (GB): 1.5386581420898438\n",
+      "Epoch: 12 / 201, Batch: 89 (2880 / 5504), Elapsed time: 141.45 mins\n",
+      "Enc Loss = 35.29, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13533.11, dis_Loss = 5.83, dec_Loss = 82.81, Elapsed time: 141.52 mins\n",
+      "Memory Use (GB): 1.7421417236328125\n",
+      "Epoch: 12 / 201, Batch: 90 (2912 / 5504), Elapsed time: 141.52 mins\n",
+      "Enc Loss = 34.08, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14219.39, dis_Loss = 6.15, dec_Loss = 83.50, Elapsed time: 141.59 mins\n",
+      "Memory Use (GB): 1.7817001342773438\n",
+      "Epoch: 12 / 201, Batch: 91 (2944 / 5504), Elapsed time: 141.59 mins\n",
+      "Enc Loss = 32.91, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13739.46, dis_Loss = 5.73, dec_Loss = 83.02, Elapsed time: 141.65 mins\n",
+      "Memory Use (GB): 1.716064453125\n",
+      "Epoch: 12 / 201, Batch: 92 (2976 / 5504), Elapsed time: 141.65 mins\n",
+      "Enc Loss = 33.72, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 11596.08, dis_Loss = 6.84, dec_Loss = 80.87, Elapsed time: 141.72 mins\n",
+      "Memory Use (GB): 1.7530136108398438\n",
+      "Epoch: 12 / 201, Batch: 93 (3008 / 5504), Elapsed time: 141.72 mins\n",
+      "Enc Loss = 34.80, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14439.65, dis_Loss = 4.52, dec_Loss = 83.72, Elapsed time: 141.78 mins\n",
+      "Memory Use (GB): 1.467132568359375\n",
+      "Epoch: 12 / 201, Batch: 94 (3040 / 5504), Elapsed time: 141.78 mins\n",
+      "Enc Loss = 36.78, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 15186.67, dis_Loss = 5.87, dec_Loss = 84.46, Elapsed time: 141.85 mins\n",
+      "Memory Use (GB): 1.4721832275390625\n",
+      "Epoch: 12 / 201, Batch: 95 (3072 / 5504), Elapsed time: 141.85 mins\n",
+      "Enc Loss = 37.51, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 14345.16, dis_Loss = 4.80, dec_Loss = 83.62, Elapsed time: 141.91 mins\n",
+      "Memory Use (GB): 1.5456314086914062\n",
+      "Epoch: 12 / 201, Batch: 96 (3104 / 5504), Elapsed time: 141.91 mins\n",
+      "Enc Loss = 33.77, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13423.76, dis_Loss = 5.47, dec_Loss = 82.70, Elapsed time: 141.98 mins\n",
+      "Memory Use (GB): 1.6266899108886719\n",
+      "Epoch: 12 / 201, Batch: 97 (3136 / 5504), Elapsed time: 141.98 mins\n"
      ]
     }
    ],
